Tree drawing: Fixed centring parents, need to fix overlaps

--- a/src/index.css
+++ b/src/index.css
@@ -42,4 +42,5 @@ a {
 }
 .tree__word {
   margin:2em;
+  opacity:0.5;
 }
